--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config proxy.config.json",
+    "start": "ng serve --proxy-config proxy.config.json --port 4208",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -49,6 +49,6 @@
     "protractor": "^5.2.0",
     "ts-node": "^3.3.0",
     "tslint": "^5.8.0",
-    "typescript": "^2.4.2"
+    "typescript": "^2.5.3"
   }
 }
